--- a/demo.html
+++ b/demo.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
  <html>
+  <head>
+    <title> My first webpage </title>
+</head>
   
-  <form>
+  <body style="background-color:grey;text-align:center">
+   <form>
     <text> Enter your favorite music genre: </text> <input>
     <br>
     <button>submit</button>
-  </form>  
+  </form> 
+    </body> 
     <br>
     <br>
     <br>
@@ -13,11 +18,5 @@
     <br>
     <img width = 25% src = "https://www.google.com/imgres?imgurl=https%3A%2F%2Fs11234.pcdn.co%2Fwp-content%2Fuploads%2F2020%2F07%2FScreen-Shot-2020-07-14-at-2.44.26-PM.png&imgrefurl=https%3A%2F%2Fdjtechtools.com%2F2020%2F07%2F14%2Fbest-ai-platforms-to-help-you-make-music%2F&tbnid=lkl01jsPs-1rfM&vet=12ahUKEwivksH7juj6AhVugBUDHVAxB0UQMygFegUIARC0AQ..i&docid=R5jyl21djFBVAM&w=1640&h=857&q=ai%20music%20generator&safe=active&ved=2ahUKEwivksH7juj6AhVugBUDHVAxB0UQMygFegUIARC0AQ">
     <br>
-  <a href= https://aiva.ai/> Click here to go to website</a>
-  
-  
-  
-  
-  
-  
+  <a href= https://aiva.ai/> Click here to go to website</a> 
  </html>
